Ajuste nos assets.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,4 +1,4 @@
-@import "heroic-features";
-@import "jquery-ui";
-@import "jquery.raty";
+@import "site/heroic-features";
+@import "site/jquery-ui";
+@import "site/jquery.raty";
 @import "*";
