--- a/app/views/books/_index.js.erb
+++ b/app/views/books/_index.js.erb
@@ -4,7 +4,7 @@ $(document).ready(function(){
         score : '<%= book.average_rating %>',
         readOnly : true,
         halfShow : true,
-        path: '/assets'
+        path: '<%= root_url %>/assets'
       });
   <% end %>
 });
