--- a/app/views/comments/create_reply.js.erb
+++ b/app/views/comments/create_reply.js.erb
@@ -15,7 +15,11 @@
     score : '<%= @new_reply.user.rating_by_user(@book) %>',
     readOnly : true,
     halfShow : true,
-    path: '/assets'
+    starOff  : "<%= asset_path('star-off.png') %>",
+    starHalf : "<%= asset_path('star-half.png') %>",
+    starOn   : "<%= asset_path('star-on.png') %>",
+    cancelOff : "<%= asset_path('cancel-off.png') %>",
+    cancelOn  : "<%= asset_path('cancel-on.png') %>"
   });
 
   $("#edit_comment<%= @new_reply.id %>").click(function(e){
