Improve test coverage.

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -28,6 +28,7 @@
     <h3><%= @book.title %></h3>
     <h5><%= t('labels.book.by') %>: <i><%= @book.author %></i></h5>
     <h5><%= t('labels.book.language') %>: <%= @book.language %></h5>
+    <h5><%= t('labels.book.isbn') %>: <%= @book.ISBN %></h5>
     <div style="display:inline-block">
       <span class="label label-success" id="note"></span>
       <div id="average_rating"></div>
