--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -35,7 +35,7 @@
     <% if !user_signed_in? %>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to 'Pagina inicial', root_path %></li>
-          <li><%= link_to 'Faça seu loguin', new_user_session_path %></li>
+          <li><%= link_to 'Faça seu login', new_user_session_path %></li>
           <li><%= link_to 'Cadastre-se', new_user_registration_path %></li>
         </ul>
     <% end %>
